objects/npe5__Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>npe5__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe5__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npe5__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe5__Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Contacts</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe5__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Affiliation&apos;s Organization will be stored on the Contact record.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe5__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe5__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe5__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>